# butterknife

./: .gitignore  .gitmodules  README.md  test_plan.csv
butter/: pyproject.toml
butter/butter/: AverageDataResults.csv  QoEplotter.asv  QoEplotter.m  client.py  client_buf.py  client_launcher.sh  client_unbuf.py  manifest.py  plot.py  server.py
butter/data/: test1.csv  test10.csv  test11.csv  test12.csv  test13.csv  test14.csv  test15.csv  test16.csv  test17.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv  test9.csv
handle/: CMakeLists.txt  pyproject.toml
handle/grc/: 2ue.grc  2ue.py  3ue.grc  3ue.py  4ue.grc  4ue.py
handle/handle/: multiplex_zmq.py  rl_interface.py
handle/src/: CMakeLists.txt
slicer/: pyproject.toml
slicer/slicer/: Application.py  Application_simulation.py  DQN.py  Environment.py  Memory.py  __init__.py  client_simulation.py  network_slicing_application.py
slicer/tests/: test_slicer.py
toast/: pyproject.toml
toast/toast/: client.py  main.py  server.py
