[tool.poetry]
name = "handle"
version = "0.1.0"
description = ""
authors = ["Raini Wu <rainiwu@ucsd.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
zmq = "^0.0.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
