[tool.poetry]
name = "slicer"
version = "0.1.0"
description = ""
authors = ["Raini Wu <rainiwu@ucsd.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
butter = {path = "../butter"}
torch = "^1.13.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
