[tool.poetry]
name = "toast"
version = "0.1.0"
description = ""
authors = ["Raini Wu <rainiwu01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-pytun = "^2.4.1"
zmq = "^0.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
